# HERBSHARE

./: .dockerignore  .gitignore  DESCRIPTION  Dockerfile  LICENSE  README.md  app.R  google-analytics.html  install_packages.R  manifest.json  pyproject.toml  requirements.txt  styles.css
.posit/publish/: HERBSHARE-HBD7.toml  HERBSPHERE-47B5.toml
.posit/publish/deployments/: deployment-KAH6.toml  deployment-T9B0.toml
modules/: about_panel.R  engine_panel.R  explorer_panel.R
modules/auxiliary/: HERBSHARE_metadata.R  HERBSPHERE_metadata.R  engine_predict.py  gbif.R  herbaria_locations.R  predict_traits.R  read_spectra.R  read_svc.R
modules/auxiliary/pytorh/: 03a-model_finetune.py  03b-predict_finetune.py  README.md  boxcox_utils.py  dataset_definition.py  finetune_trait_stats.json  model_architecture.py
modules/engine/: README.md  example_spectra_format.csv  predict_traits.R  predictions_output.R  spectra_viewer.R  trait_selector.R  trait_visualization.R  upload_spectra.R
modules/explorer/: create_database.R  data_selection.R  download.R  map.R  point_selection_panel.R  records_summary.R  select_by.R  select_data.R  specimen_selection.R
www/: styles.css
